-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.7.0
-
None
-
3
-
9223372036854775807
Right now, we do lookup .. to get parent FID in mdd_parent_fid. Instead we should try to retrieve parent FID from linkEA first, if it fails, then lookup. two benefits:
1. read EA will be likely cheaper than lookup.
2. for stripe dir, it might load all sub_stripes in memory, and pin them in the memory with the master object. i.e. these sub stripe object will only be released when the master object is freed, which might cause that notorious lu_object_find() hang to wait for the BANSEE object to be put.